--- a/views/index.html
+++ b/views/index.html
@@ -2,76 +2,113 @@
 <html>
   <head>
     <title>Stock Price Checker</title>
-    <link id="favicon" rel="icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./public/style.css">
+    <link
+      id="favicon"
+      rel="icon"
+      href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./public/style.css" />
   </head>
   <body>
     <header>
       <h1>
-        ISQA_5 - Nasdaq Stock Price Checker
+        Nasdaq Stock Price Checker
       </h1>
     </header>
-    <div id='userstories' style='margin-left: 5%; margin-top: 5%'>
-      <h3>Example usage:</h3>
-      <code>/api/stock-prices?stock=goog</code><br>
-      <code>/api/stock-prices?stock=goog&amp;like=true</code><br>
-      <code>/api/stock-prices?stock=goog&amp;stock=msft</code><br>
-      <code>/api/stock-prices?stock=goog&amp;stock=msft&amp;like=true</code><br>
-      <h3>Example return:</h3>
-      <code>{"stockData":{"stock":"GOOG","price":786.90,"likes":1}}</code><br>
-      <code>{"stockData":[{"stock":"MSFT","price":62.30,"rel_likes":-1},{"stock":"GOOG","price":786.90,"rel_likes":1}]}</code>
-    </div>
-    <hr style='margin: 50px'>
-    <div id='testui' style='margin-left: 5%'>
-      <h2 style="text-align: left">Front-End:</h2>
+
+    <hr style="margin: 20px" />
+    <div id="testui" style="margin-left: 5%">
+      <h2 style="text-align: center">Get Price Here:</h2>
       <h3>Get single price and total likes</h3>
       <form id="testForm2" class="border">
-        <input type="text" name="stock" placeholder="goog" style="width: 100px" required=''>
-        <input type="checkbox" name="like" value=true> Like?<br>
-        <button type="submit">Get Price!</button>
+        <input
+          type="text"
+          name="stock"
+          placeholder="goog"
+          style="width: 120px"
+          required=""
+          class="input"
+        />
+        <input type="checkbox" name="like" value="true" class="checkBox" />
+        Like?<br />
+        <button type="submit" class="btn">Get Price!</button>
       </form>
       <h3>Compare and get relative likes</h3>
       <form id="testForm" class="border">
-        <input type="text" name="stock" placeholder="goog" style="width: 100px" required=''>
-        <input type="text" name="stock" placeholder="msft" style="width: 100px" required=''>
-        <input type="checkbox" name="like" value=true> Like both?<br>
-        <button type="submit">Get Price!</button>
+        <input
+          type="text"
+          name="stock"
+          placeholder="goog"
+          style="width: 120px"
+          required=""
+          class="input"
+        />
+        <input
+          type="text"
+          name="stock"
+          placeholder="msft"
+          style="width: 120px; margin-left: 5px;"
+          required=""
+          class="input"
+        />
+        <input type="checkbox" name="like" value="true" class="checkBox" /> Like
+        both?<br />
+        <button type="submit" class="btn">Get Price!</button>
       </form>
-      <code id='jsonResult'></code>
+      <code id="jsonResult" style="font-weight: bold;"></code>
     </div>
-    <hr style='margin: 50px; margin-top: 200px'>
+    <hr style="margin: 30px;" />
+
+    <div id="userstories" style="margin-left: 5%; margin-top: 5%">
+      <h3>Example usage:</h3>
+      <code>/api/stock-prices?stock=goog</code><br />
+      <code>/api/stock-prices?stock=goog&amp;like=true</code><br />
+      <code>/api/stock-prices?stock=goog&amp;stock=msft</code><br />
+      <code>/api/stock-prices?stock=goog&amp;stock=msft&amp;like=true</code
+      ><br />
+      <h3>Example return:</h3>
+      <code>{"stockData":{"stock":"GOOG","price":786.90,"likes":1}}</code><br />
+      <code
+        >{"stockData":[{"stock":"MSFT","price":62.30,"rel_likes":-1},{"stock":"GOOG","price":786.90,"rel_likes":1}]}</code
+      >
+    </div>
+    <hr style="margin-top: 50px;" />
+
     <!-- Your web-app is https, so your scripts need to be too -->
-    <script src="https://code.jquery.com/jquery-2.2.1.min.js"
-            integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
-            crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-2.2.1.min.js"
+      integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
+      crossorigin="anonymous"
+    ></script>
     <script>
       $(function() {
-        $('#testForm').submit(function(e) {
+        $("#testForm").submit(function(e) {
           $.ajax({
-            url: '/api/stock-prices',
-            type: 'get',
-            data: $('#testForm').serialize(),
+            url: "/api/stock-prices",
+            type: "get",
+            data: $("#testForm").serialize(),
             success: function(data) {
-              $('#jsonResult').text(JSON.stringify(data));
+              $("#jsonResult").text(JSON.stringify(data));
             }
           });
           e.preventDefault();
         });
-        $('#testForm2').submit(function(e) {
+        $("#testForm2").submit(function(e) {
           $.ajax({
-            url: '/api/stock-prices',
-            type: 'get',
-            data: $('#testForm2').serialize(),
+            url: "/api/stock-prices",
+            type: "get",
+            data: $("#testForm2").serialize(),
             success: function(data) {
-              $('#jsonResult').text(JSON.stringify(data));
+              $("#jsonResult").text(JSON.stringify(data));
             }
           });
           e.preventDefault();
         });
       });
-   </script>
+    </script>
   </body>
 </html>
